# infrastructure

./: .gitignore  .yamlint  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: adguard-restart.yml  airflow-deploy.yml  backups.yaml  backups.yml  cameras.yaml  cleanup-closed-alerts.yml  cloudflare-speedtest.yml  cloudflare.yaml  deploy.yml  dns.yaml  docker-compatibility.yml  docker.yml  hassio.yaml  infisical-test.yml  lint.yaml  lint.yml  multi-wireguard.yml  nix.yml  poetry-deploy.yml  security.yml  speedtest.yaml  speedtest.yml  ssh-test.yml  tf-state.yml  trivy-host-scan.yml  trivy-scan.yml  updates.yml  wireguard-test.yml
.github/workflows-old/: adguard-restart.yml  airflow-deploy.yml  backups.yaml  deploy.yml  poetry-deploy.yml  speedtest.yaml  wireguard-test.yml
docker/: replace.sh
docker/photo-server/: setup.md
docker/racknerd/: network-setup.sh  setup.MD  setup.md
docs/: ups.md
nix/: help.md
nix/ai-server/: flake.nix
nix/macbook-pro/: finder.nix  flake.nix  home.nix  readme.md  settings.nix  setup.sh  zsh.nix
nix/scripts/: mas-disable.sh  (+3 more)
scripts/: diffs-no-merge.sh  diffs.sh  lint.sh  security.sh  ssh.sh  system-update.sh
services/: databasus-verification-agent.service
src/: cloudflare_ddns.py  get_credentials.py  speedtest-test.py
tests/: Backups.py  __init__.py  helper.py  test_backups.py  test_cameras.py  test_cloudflare.py  test_containers.py  test_dns.py  test_hassio.py  test_speedtest.py
tf/: .gitignore  README.md  init.sh  install.sh
trivy/: compose.yml  trivy.yaml
(+275 files in other folders)
