[project]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack Stockley", email = "jack@jstockley.com"}
]
readme = "README.md"
package-mode = false
requires-python = "<4.0,>=3.13"
dependencies = [
    "pytest ==8.3.5",
    "testcontainers ==4.9.2",
    "docker ==7.1.0",
    "pyyaml ==6.0.2"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
