[project]
name = "infrastructure"
version = "0.1.0"
description = "Contains docker compose files, for infrastructure running on-prem/off-prem"
authors = [
    {name = "Jack Stockley", email = "jack@jstockley.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "testcontainers>=4.9.2",
]
