[project]
name = "infrastructure"
version = "0.1.0"
description = "Contains docker compose files, for infrastructure running on-prem/off-prem"
authors = [
    {name = "Jack Stockley", email = "jack@jstockley.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "testcontainers>=4.13.2",
    "urllib3>=2.5.0",
]
